syntax = "proto3";
package print_nanny.alert;
import "common.proto";

message VideoRenderRequest {
    print_nanny.common.Metadata metadata = 1;
    float ts = 2;
    string cdn_output_path = 3;
    string print_session_datesegment = 4;
}